# claudecollab

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  package-lock.json  package.json
.claude-plugin/: marketplace.json
plugin/.claude-plugin/: plugin.json
plugin/commands/: collab.md
plugin/skills/collab-invite/: SKILL.md
rust/: Cargo.toml
rust/crates/protocol/: Cargo.toml
rust/crates/protocol/src/: lib.rs
scripts/: rig-real.sh  rig.sh
test/: e2e.test.js  knock-integrity.test.js  mirror-safety.test.js  plugin-manifests.test.js  roster-id.test.js
test/fixtures/: fake-claude.cjs
video/: package-lock.json  package.json
video/src/: Footage.jsx  Intro.jsx  Master.jsx  Outro.jsx  Root.jsx  Typewriter.jsx  theme.js
